--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,120 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Ethereum Web Interface</title>
-</head>
-<body>
-	<h1>Hello</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-</body>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" content="">
+		<meta name="author" content="">
+		<title>Getting Started with Ethereum</title>
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+	</head>
+	<body>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h1 class="title">Getting Started with Ethereum</h1>
+				</div>
+			</div>
+			<div class="row justify-content-center">
+				<div id="accordion" role="tablist" aria-multiselectable="true">
+				  <div class="card">
+					<div class="card-header" role="tab" id="headingOne">
+					  <h5 class="mb-0">
+						<a data-toggle="collapse" data-parent="#accordion" href="#createAccount" aria-expanded="true" aria-controls="createAccount">1. Create a new account</a>
+					  </h5>
+					</div>
+					<div id="createAccount" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
+					  <div class="card-block">
+						<p>In this first step, we need to create a new account for your Ethereum node. For creating your account, you'll need a password that you will use to lock or unlock your account when initiating a transaction.  Please enter your password below and click generate a new account to get started.</p>
+						<form id="createNewAccount" class="data-entry-form">
+							<div class="form-group row">
+								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+									<input type="text" class="form-control" id="password" placeholder="Enter your Password here">	
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+									<button type="submit" class="btn btn-primary">Create Account</button>
+								</div>
+							</div>
+							<label for="accountAddress">Generated Account address</label>
+							<input type="text" class="form-control" id="accountAddress" placeholder="Your Account Addresss" readonly>
+							<p><b>Please make a note of your generated account address before moving to the next step.</b></p>
+						</form>
+					  </div>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="card-header" role="tab" id="headingOne">
+					  <h5 class="mb-0">
+						<a data-toggle="collapse" data-parent="#accordion" href="#generateKeys" aria-expanded="true" aria-controls="generateKeys">2. Generate the Genesis file for your Ethereum chain</a>
+					  </h5>
+					</div>
+					<div id="generateKeys" class="collapse" role="tabpanel" aria-labelledby="headingOne">
+					  <div class="card-block">
+						<p>Enter the contents for your custom Genesis file in the box below. The content here will be used to initialize your Ethereum node in the next step.</p>
+						<form id="customGenesis" class="data-entry-form">
+							<div class="form-group row">
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+								    <label for="genesisContent">Genesis File Contents</label>	
+									<textarea class="form-control" id="genesisContent" rows="8"></textarea>
+								</div>
+							</div>
+							<div class="form-group row">
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+									<button type="submit" class="btn btn-primary">Generate the Genesis File</button>
+								</div>
+							</div>
+							<label for="publicKeygen">Genesis File Status</label>
+							<input type="text" class="form-control" id="publicKeygen" placeholder="File not generated yet" readonly>
+						</form>
+					  </div>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="card-header" role="tab" id="headingOne">
+					  <h5 class="mb-0">
+						<a data-toggle="collapse" data-parent="#accordion" href="#encrypt" aria-expanded="true" aria-controls="encrypt">3. Initialize your Ethereum Node</a>
+					  </h5>
+					</div>
+					<div id="encrypt" class="collapse" role="tabpanel" aria-labelledby="headingOne">
+					  <div class="card-block">
+						<p>In this step, we will initialize your Ethereum node using the custom Genesis file that you created in the previous step. If you did not create a file, please complete step 2 before performing step 3.</p>
+						<form id="initializeEthereum" class="data-entry-form">
+							<div class="form-group text-center">
+								<button type="submit" class="btn btn-primary">Initialize Ethereum Node</button>
+							</div>
+							<label for="ethereumInitStatus">Ethereum Node Status</label>
+							<input type="text" class="form-control" id="ethereumInitStatus" placeholder="Not initialized yet" readonly>
+						</form>
+					  </div>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="card-header" role="tab" id="headingOne">
+					  <h5 class="mb-0">
+						<a data-toggle="collapse" data-parent="#accordion" href="#decrypt" aria-expanded="true" aria-controls="decrypt">4. Start your Ethereum Node</a>
+					  </h5>
+					</div>
+					<div id="decrypt" class="collapse" role="tabpanel" aria-labelledby="headingOne">
+					  <div class="card-block">
+						<p>Finally, we will start our Ethereum node to be able to join the Blockchain and transact on it. To do so, simply click the button below and then wait for the status to change. Then, move to the next step. </p>
+						<form id="startNode" class="data-entry-form">
+							<div class="form-group text-center">
+								<button type="submit" class="btn btn-primary">Start Ethereum node</button>
+							</div>
+							<label for="ethereumNodeStatus">Ethereum Node Status</label>
+							<input type="text" class="form-control" id="ethereumNodeStatus" placeholder="Ethereum Node Status" readonly>
+						</form>
+					  </div>
+					</div>
+				  </div>
+				</div>
+			</div>
+		</div>		
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/popper.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/cryptico/cryptico.min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
+	</body>
 </html>
