--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,8 @@
 									<button type="submit" class="btn btn-primary">Generate the Genesis File</button>
 								</div>
 							</div>
-							<label for="publicKeygen">Genesis File Status</label>
-							<input type="text" class="form-control" id="publicKeygen" placeholder="File not generated yet" readonly>
+							<label for="genesisFileStatus">Genesis File Status</label>
+							<input type="text" class="form-control" id="genesisFileStatus" placeholder="File not generated yet" readonly>
 						</form>
 					  </div>
 					</div>
@@ -110,11 +110,15 @@
 				  </div>
 				</div>
 			</div>
+			<div class="row text-center" style="padding-top:10px; padding-bottom: 30px;">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<button type="button" class="btn btn-dark btn-large" disabled id="nextStep">Move to Step 2</button>
+				</div>
+			</div>
 		</div>		
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/popper.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/cryptico/cryptico.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
