--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,8 @@
 				</div>
 			</div>
 			<div class="row text-center" style="padding-top:10px; padding-bottom: 30px;">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<div class="col-12">
+					<button type="button" class="btn btn-primary btn-large" id="stopNode">Stop all Ethereum Instances</button>
 					<button type="button" class="btn btn-dark btn-large" disabled id="nextStep">Move to Step 2</button>
 				</div>
 			</div>
