--- a/public/ethereum.html
+++ b/public/ethereum.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<div id="loader"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -46,6 +47,8 @@
 										<button type="submit" class="btn btn-primary">Add Peer</button>
 									</div>
 								</div>
+								<label for="peerStatus">Connected Peer Count</label>
+								<input type="text" class="form-control" id="peerStatus" placeholder="Add Peer Status" readonly>
 							</form>
 						</div>
 					</div>
@@ -198,6 +201,7 @@
 				}else if(resp.status == "complete"){
 					$("#enodeAddress").val(resp.enode);
 					$("#coinbaseAddress").val(resp.coinbase);
+					$("#loader").fadeOut('slow');
 				}
 			});
 		});
