--- a/public/index.html
+++ b/public/index.html
@@ -45,18 +45,23 @@
 					</div>
 					<div id="createAccount" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
 					  <div class="card-block">
-						<p>In this first step, we need to create a new account for your Ethereum node. For creating your account, you'll need a password that you will use to lock or unlock your account when initiating a transaction.  Please enter your password below and click generate a new account to get started.</p>
+						<p>In this first step, we need to create two new accounts for two of your Ethereum nodes. These 2 accounts will serve as the base accounts on their respective nodes. For creating your accounts, you'll need a password that you will use to lock or unlock your account when initiating a transaction.  Please enter your password below for two accounts and click create accounts to get started.</p>
 						<form id="createNewAccount" class="data-entry-form">
 							<div class="form-group row">
-								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-									<input type="text" class="form-control" id="password" placeholder="Enter your Password here">	
+								<div class="col-12">
+									<input type="text" class="form-control" id="passwordNode1" placeholder="Enter your Password here for Node 1">	
 								</div>
-								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-									<button type="submit" class="btn btn-primary">Create Account</button>
+								<div class="col-12">
+									<input type="text" class="form-control" id="passwordNode2" placeholder="Enter your Password here for Node 2">	
+								</div>
+								<div class="col-12 text-center">
+									<button type="submit" class="btn btn-primary">Create Accounts</button>
 								</div>
 							</div>
-							<label for="accountAddress">Generated Account address</label>
-							<input type="text" class="form-control" id="accountAddress" placeholder="Your Account Addresss" readonly>
+							<label for="accountAddressNode1">Generated Account address for Node 1</label>
+							<input type="text" class="form-control" id="accountAddressNode1" placeholder="Your Account Addresss for Node 1" readonly>
+							<label for="accountAddressNode2">Generated Account address for Node 2</label>
+							<input type="text" class="form-control" id="accountAddressNode2" placeholder="Your Account Addresss for Node 2" readonly>
 							<p><b>Please make a note of your generated account address before moving to the next step.</b></p>
 						</form>
 					  </div>
@@ -65,12 +70,12 @@
 				  <div class="card">
 					<div class="card-header" role="tab" id="headingOne">
 					  <h5 class="mb-0">
-						<a data-toggle="collapse" data-parent="#accordion" href="#generateKeys" aria-expanded="true" aria-controls="generateKeys">2. Generate the Genesis file for your Ethereum chain</a>
+						<a data-toggle="collapse" data-parent="#accordion" href="#generateKeys" aria-expanded="true" aria-controls="generateKeys">2. Generate the Genesis file for your Ethereum Nodes</a>
 					  </h5>
 					</div>
 					<div id="generateKeys" class="collapse" role="tabpanel" aria-labelledby="headingOne">
 					  <div class="card-block">
-						<p>Enter the contents for your custom Genesis file in the box below. The content here will be used to initialize your Ethereum node in the next step.</p>
+						<p>Enter the contents for your custom Genesis file in the box below. The content here will be used to initialize both of your Ethereum nodes in the next step.</p>
 						<form id="customGenesis" class="data-entry-form">
 							<div class="form-group row">
 								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -92,17 +97,17 @@
 				  <div class="card">
 					<div class="card-header" role="tab" id="headingOne">
 					  <h5 class="mb-0">
-						<a data-toggle="collapse" data-parent="#accordion" href="#encrypt" aria-expanded="true" aria-controls="encrypt">3. Initialize your Ethereum Node</a>
+						<a data-toggle="collapse" data-parent="#accordion" href="#encrypt" aria-expanded="true" aria-controls="encrypt">3. Initialize your Ethereum Nodes</a>
 					  </h5>
 					</div>
 					<div id="encrypt" class="collapse" role="tabpanel" aria-labelledby="headingOne">
 					  <div class="card-block">
-						<p>In this step, we will initialize your Ethereum node using the custom Genesis file that you created in the previous step. If you did not create a file, please complete step 2 before performing step 3.</p>
+						<p>In this step, we will initialize your Ethereum nodes using the custom Genesis file that you created in the previous step. If you did not create a file, please complete step 2 before performing step 3.</p>
 						<form id="initializeEthereum" class="data-entry-form">
 							<div class="form-group text-center">
-								<button type="submit" class="btn btn-primary">Initialize Ethereum Node</button>
+								<button type="submit" class="btn btn-primary">Initialize Ethereum Nodes</button>
 							</div>
-							<label for="ethereumInitStatus">Ethereum Node Status</label>
+							<label for="ethereumInitStatus">Ethereum Nodes Status</label>
 							<input type="text" class="form-control" id="ethereumInitStatus" placeholder="Not initialized yet" readonly>
 						</form>
 					  </div>
@@ -111,15 +116,15 @@
 				  <div class="card">
 					<div class="card-header" role="tab" id="headingOne">
 					  <h5 class="mb-0">
-						<a data-toggle="collapse" data-parent="#accordion" href="#decrypt" aria-expanded="true" aria-controls="decrypt">4. Start your Ethereum Node</a>
+						<a data-toggle="collapse" data-parent="#accordion" href="#decrypt" aria-expanded="true" aria-controls="decrypt">4. Start your Ethereum Nodes</a>
 					  </h5>
 					</div>
 					<div id="decrypt" class="collapse" role="tabpanel" aria-labelledby="headingOne">
 					  <div class="card-block">
-						<p>Finally, we will start our Ethereum node to be able to join the Blockchain and transact on it. To do so, simply click the button below and then wait for the status to change. Then, move to the next step. </p>
+						<p>Finally, we will start your Ethereum nodes to be able to join the Blockchain and transact on it. To do so, simply click the button below and then wait for the status to change. Then, move to the next step. </p>
 						<form id="startNode" class="data-entry-form">
 							<div class="form-group text-center">
-								<button type="submit" class="btn btn-primary">Start Ethereum node</button>
+								<button type="submit" class="btn btn-primary">Start Ethereum nodes</button>
 							</div>
 							<label for="ethereumNodeStatus">Ethereum Node Status</label>
 							<input type="text" class="form-control" id="ethereumNodeStatus" placeholder="Ethereum Node Status" readonly>
