Updated methods and description of tasks

--- a/public/ethereum.html
+++ b/public/ethereum.html
@@ -384,7 +384,7 @@
 					</div>
 					<div id="checkTransaction" class="collapse" role="tabpanel" aria-labelledby="headingSeven">
 						<div class="card-block">
-							<p>If you want to check your balance, press the button below to query and return the result.</p>
+							<p>If you want to check the status of transactions, press the button below to query the blockchain and return the result.</p>
 							<div class="row">
 								<div class="col-6">
 									<h4>Node 1</h4>
