--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 					<button type="button" class="btn btn-primary btn-large" style="margin-bottom: 20px;" id="moveToStep2">Move to Step 2</button><br/>
 					<button type="button" class="btn btn-primary btn-large" style="margin-bottom: 20px;" id="stopAllEthereum">Stop all Ethereum Instances</button><br/>
 					<button type="button" class="btn btn-danger btn-large" id="deleteEverything">Delete Everything and start Fresh</button>
-					<p><b>Warning:</b> Doing so will delete all your Ethereum node data including your account and your account balance. Only do so if you are willing to lose all of it.</p>
+					<p><b>Warning:</b> Doing so will delete all the Ethereum node data including your accounts and your account balances. Only do so if you are willing to lose all of it.</p>
 				</div>
 			</div>
 		</div>
@@ -45,7 +45,7 @@
 					</div>
 					<div id="createAccount" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
 					  <div class="card-block">
-						<p>In this first step, we need to create two new accounts for two of your Ethereum nodes. These 2 accounts will serve as the base accounts on their respective nodes. For creating your accounts, you'll need a password that you will use to lock or unlock your account when initiating a transaction.  Please enter your password below for two accounts and click create accounts to get started.</p>
+						<p>In this first step, we need to create two new accounts for two of the Ethereum nodes. These 2 accounts will serve as the base accounts on their respective nodes. For creating your accounts, you'll need a password that you will use to lock or unlock your account when initiating a transaction.  Please enter your password below for two accounts and click create accounts to get started.</p>
 						<form id="createNewAccount" class="data-entry-form">
 							<div class="form-group row">
 								<div class="col-12">
@@ -70,17 +70,17 @@
 				  <div class="card">
 					<div class="card-header" role="tab" id="headingOne">
 					  <h5 class="mb-0">
-						<a data-toggle="collapse" data-parent="#accordion" href="#generateKeys" aria-expanded="true" aria-controls="generateKeys">2. Generate the Genesis file for your Ethereum Nodes</a>
+						<a data-toggle="collapse" data-parent="#accordion" href="#generateKeys" aria-expanded="true" aria-controls="generateKeys">2. Generate the Genesis file for the Ethereum Nodes</a>
 					  </h5>
 					</div>
 					<div id="generateKeys" class="collapse" role="tabpanel" aria-labelledby="headingOne">
 					  <div class="card-block">
-						<p>Enter the contents for your custom Genesis file in the box below. The content here will be used to initialize both of your Ethereum nodes in the next step.</p>
+						<p>Enter the contents for the custom Genesis file in the box below. The content here will be used to initialize both of your Ethereum nodes in the next step.</p>
 						<form id="customGenesis" class="data-entry-form">
 							<div class="form-group row">
 								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 								    <label for="genesisContent">Genesis File Contents</label>	
-									<textarea class="form-control" id="genesisContent" rows="8"></textarea>
+									<textarea class="form-control" id="genesisContent" rows="8" readonly></textarea>
 								</div>
 							</div>
 							<div class="form-group row">
@@ -97,12 +97,12 @@
 				  <div class="card">
 					<div class="card-header" role="tab" id="headingOne">
 					  <h5 class="mb-0">
-						<a data-toggle="collapse" data-parent="#accordion" href="#encrypt" aria-expanded="true" aria-controls="encrypt">3. Initialize your Ethereum Nodes</a>
+						<a data-toggle="collapse" data-parent="#accordion" href="#encrypt" aria-expanded="true" aria-controls="encrypt">3. Initialize the Ethereum Nodes</a>
 					  </h5>
 					</div>
 					<div id="encrypt" class="collapse" role="tabpanel" aria-labelledby="headingOne">
 					  <div class="card-block">
-						<p>In this step, we will initialize your Ethereum nodes using the custom Genesis file that you created in the previous step. If you did not create a file, please complete step 2 before performing step 3.</p>
+						<p>In this step, we will initialize the Ethereum nodes using the custom Genesis file that you created in the previous step. If you did not create a file, please complete step 2 before performing step 3.</p>
 						<form id="initializeEthereum" class="data-entry-form">
 							<div class="form-group text-center">
 								<button type="submit" class="btn btn-primary">Initialize Ethereum Nodes</button>
@@ -116,12 +116,12 @@
 				  <div class="card">
 					<div class="card-header" role="tab" id="headingOne">
 					  <h5 class="mb-0">
-						<a data-toggle="collapse" data-parent="#accordion" href="#decrypt" aria-expanded="true" aria-controls="decrypt">4. Start your Ethereum Nodes</a>
+						<a data-toggle="collapse" data-parent="#accordion" href="#decrypt" aria-expanded="true" aria-controls="decrypt">4. Start the Ethereum Nodes</a>
 					  </h5>
 					</div>
 					<div id="decrypt" class="collapse" role="tabpanel" aria-labelledby="headingOne">
 					  <div class="card-block">
-						<p>Finally, we will start your Ethereum nodes to be able to join the Blockchain and transact on it. To do so, simply click the button below and then wait for the status to change. Then, move to the next step. </p>
+						<p>Finally, we will start the Ethereum nodes to be able to join the Blockchain and transact on it. To do so, simply click the button below and then wait for the status to change. Then, move to the next step. </p>
 						<form id="startNode" class="data-entry-form">
 							<div class="form-group text-center">
 								<button type="submit" class="btn btn-primary">Start Ethereum nodes</button>
@@ -136,7 +136,6 @@
 			</div>
 			<div class="row text-center" style="padding-top:10px; padding-bottom: 30px;">
 				<div class="col-12">
-					<button type="button" class="btn btn-primary btn-large" id="stopNode">Stop all Ethereum Instances</button>
 					<button type="button" class="btn btn-dark btn-large" disabled id="nextStep">Move to Step 2</button>
 				</div>
 			</div>
@@ -164,6 +163,8 @@
 					$("#loader").fadeOut('slow');
 				}
 			});
+			var genesisContent = {"config":{"chainId":13,"homesteadBlock":0,"eip155Block":0,"eip158Block":0},"difficulty":"0x20000","gasLimit":"0x2fefd8","alloc":{},"nonce":"0x0000000000000042","timestamp":"0x0","parentHash":"0x0000000000000000000000000000000000000000000000000000000000000000","extraData":"","mixhash":"0x0000000000000000000000000000000000000000000000000000000000000000","coinbase":"0x0000000000000000000000000000000000000000"};
+			$("#genesisContent").val(JSON.stringify(genesisContent, null, 4));
 		});
 	</script>
 	</body>
