Updated Score Generation

--- a/public/ethereum.html
+++ b/public/ethereum.html
@@ -423,7 +423,8 @@
 			<div class="col-12 text-center">
 				<p><b>Note</b>: You can go to any of these above sections again in any order that you want to explore the tool.</p>
 				<button type="button" class="btn btn-primary btn-large" id="submitProject">Submit Project</button>
-				<input type="text" placeholder="Your submission code will be generated here" readonly class="form-control" style="margin:20px auto; margin-bottom: 80px; width: 80%;" id="submitScore">
+				<input type="text" placeholder="Your submission code will be generated here" readonly class="form-control" style="margin:20px auto; width: 80%;" id="submitScore">
+				<button type="button" class="btn btn-primary btn-large" id="copyScore" style=" margin-bottom: 80px; ">Copy Score to Clipboard</button>
 			</div>
 		</div>
 	</div>
