--- a/public/ethereum.html
+++ b/public/ethereum.html
@@ -362,7 +362,7 @@
 											</div>
 										</div>
 										<label for="transactionStatus">Transaction Status</label>
-										<input type="text" class="form-control" id="transactionStatus" placeholder="Account Unlock Status" readonly>
+										<input type="text" class="form-control" id="transactionStatus" placeholder="Transaction Status" readonly>
 									</form>
 								</div>
 								<div class="col-6">
@@ -383,7 +383,7 @@
 											</div>
 										</div>
 										<label for="transactionStatus2">Transaction Status</label>
-										<input type="text" class="form-control" id="transactionStatus2" placeholder="Account Unlock Status" readonly>
+										<input type="text" class="form-control" id="transactionStatus2" placeholder="Transaction Status" readonly>
 									</form>
 								</div>
 							</div>
