Updated desciption and time for modal

--- a/public/ethereum.html
+++ b/public/ethereum.html
@@ -444,10 +444,10 @@
 		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title">Waiting for DAGs to be generated...</h5>
+					<h5 class="modal-title">Waiting for DAG to be generated...</h5>
 				</div>
 				<div class="modal-body">
-					<p>Checking if DAGs have been generated or not. If they have not been generated, please wait <span id="longTimer" style="font-weight: bold;">5m 0s</span> for them to be generated</p>
+					<p>Checking if DAG has been generated or not. If they have not been generated, please wait a maximum of <span id="longTimer" style="font-weight: bold;">10m 0s</span> for them to be generated. If it is completed before that, this screen will disappear and you can continue ahead.</p>
 				</div>
 			</div>
 		</div>
