--- a/public/ethereum.html
+++ b/public/ethereum.html
@@ -256,6 +256,33 @@
 					</div>
 				</div>
 				<div class="card">
+					<div class="card-header" role="tab" id="headingFive">
+						<h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#miner" aria-expanded="true" aria-controls="miner">Miner</a></h5>
+					</div>
+					<div id="miner" class="collapse" role="tabpanel" aria-labelledby="headingFive">
+						<div class="card-block">
+							<p>If you want to Start or Stop a miner, use the buttons below to do so for either of the two nodes.</p>
+							<p>Before you start your miner, make sure you check the account balances. Then start the miner and wait for the timer. Then check your balance again.</p>
+							<div class="row text-center">
+								<div class="col-12">
+<!-- 									<h4>Node_1</h4> -->
+									<button type="button" class="btn btn-primary btn-large" style="margin-bottom: 20px;" id="startMiner">Start Miner</button><br/>
+									<button type="button" class="btn btn-primary btn-large" style="margin-bottom: 20px;" id="stopMiner">Stop Miner</button><br/>
+									<label for="minerStatus">Miner Response</label>
+									<input type="text" class="form-control" id="minerStatus" placeholder="Miner Response" readonly>
+								</div>
+								<!-- <div class="col-6">
+									<h4>Node_2</h4>
+									<button type="button" class="btn btn-primary btn-large" style="margin-bottom: 20px;" id="startMiner2">Start Miner</button><br/>
+									<button type="button" class="btn btn-primary btn-large" style="margin-bottom: 20px;" id="stopMiner2">Stop Miner</button><br/>
+									<label for="minerStatus2">Miner Response</label>
+									<input type="text" class="form-control" id="minerStatus2" placeholder="Miner Response" readonly>
+								</div> -->
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="card">
 					<div class="card-header" role="tab" id="headingFour">
 						<h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#unlockAccount" aria-expanded="true" aria-controls="unlockAccount">Unlock Account</a></h5>
 					</div>
@@ -304,33 +331,6 @@
 										<input type="text" class="form-control" id="unlockStatus2" placeholder="Account Unlock Status" readonly>
 									</form>
 								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="card">
-					<div class="card-header" role="tab" id="headingFive">
-						<h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#miner" aria-expanded="true" aria-controls="miner">Miner</a></h5>
-					</div>
-					<div id="miner" class="collapse" role="tabpanel" aria-labelledby="headingFive">
-						<div class="card-block">
-							<p>If you want to Start or Stop a miner, use the buttons below to do so for either of the two nodes.</p>
-							<p>Before you start your miner, make sure you check the account balances. Then start the miner and wait for the timer. Then check your balance again.</p>
-							<div class="row text-center">
-								<div class="col-12">
-<!-- 									<h4>Node_1</h4> -->
-									<button type="button" class="btn btn-primary btn-large" style="margin-bottom: 20px;" id="startMiner">Start Miner</button><br/>
-									<button type="button" class="btn btn-primary btn-large" style="margin-bottom: 20px;" id="stopMiner">Stop Miner</button><br/>
-									<label for="minerStatus">Miner Response</label>
-									<input type="text" class="form-control" id="minerStatus" placeholder="Miner Response" readonly>
-								</div>
-								<!-- <div class="col-6">
-									<h4>Node_2</h4>
-									<button type="button" class="btn btn-primary btn-large" style="margin-bottom: 20px;" id="startMiner2">Start Miner</button><br/>
-									<button type="button" class="btn btn-primary btn-large" style="margin-bottom: 20px;" id="stopMiner2">Stop Miner</button><br/>
-									<label for="minerStatus2">Miner Response</label>
-									<input type="text" class="form-control" id="minerStatus2" placeholder="Miner Response" readonly>
-								</div> -->
 							</div>
 						</div>
 					</div>
@@ -447,7 +447,7 @@
 					<h5 class="modal-title">Waiting for DAG to be generated...</h5>
 				</div>
 				<div class="modal-body">
-					<p>Checking if DAG has been generated or not. If they have not been generated, please wait a maximum of <span id="longTimer" style="font-weight: bold;">10m 0s</span> for them to be generated. If it is completed before that, this screen will disappear and you can continue ahead.</p>
+					<p>Checking if DAG has been generated or not. If it has not been generated, please wait a maximum of <span id="longTimer" style="font-weight: bold;">10m 0s</span> for them to be generated. If it is completed before that, this screen will disappear and you can continue ahead.</p>
 				</div>
 			</div>
 		</div>
